code warnings clean up